# kronop

./: README.md  app.json  eas.json  package-lock.json  package.json  server.js
AllReels/: tsconfig.json
AllReels/app/: _layout.tsx
AllReels/auth/: hook.tsx  router.tsx  service.ts
AllReels/components/: GPUMemoryExample.tsx  KronopVideoPlayer.tsx  ReelPlayer.tsx  index.ts
AllReels/constants/: theme.ts
AllReels/core/: 120FPS_renderer.js  Cargo.toml  index.ts  mobile_video_fix.js  network_bridge.js  wasm_bridge.js  zero_latency_loader.js
AllReels/hooks/: index.ts  useKronopVideoEngine.ts  useMockAuth.ts  useReels.ts
AllReels/kronop_flutter_ui/: README.md  build.sh  nodejs_bridge_server.js  pubspec.yaml
AllReels/modules/kronop-video-engine/: Cargo.toml  README.md  build.rs
AllReels/modules/kronop-video-engine/src/: cache_manager.rs  chunk_manager.rs  decoder.rs  frame_buffer.rs  jsi_bridge.rs  lib.rs  persistent_cache.rs  utils.rs
AllReels/native-modules/GPUMemoryModule/android/: CMakeLists.txt  build.gradle
AllReels/native-modules/GPUMemoryModule/android/src/main/java/com/gpumemory/: GPUMemoryModule.java  GPUMemoryPackage.java
AllReels/scripts/: reset-project.js
AllReels/services/: videoService.ts
AllReels/types/: auth.ts
VideoAll/: index.js
api/: auth.js  users.js
app/: _layout.tsx  chat.tsx  edit-profile.tsx  help-center.tsx  songs.tsx
app/(tabs)/: index.tsx  profile.tsx  reels.tsx
app/Player/: photo.tsx  song.tsx
app/menu/: index.tsx
app/photos/: [category].tsx
app/profile/: index.tsx
app/search-user/: search-user.tsx
components/: CommentModal.tsx  NativeVideoView.tsx.bak  index.ts
components/ActionButtons/: ChannelLogo.tsx  StarButton.tsx  TitleDescription.tsx  UserInfo.tsx
components/feature/: ContentListWindow.tsx  StorySection.tsx
context/: AuthContext.tsx
controllers/: userController.js
hooks/: swr.ts  useLongVideos.ts
services/: api.ts
(+97 files in other folders)
